# A2A-test

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  TESTING.md  agent_a.py  agent_b.py  docker-compose.yml  gravitee_config.py  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: build-push-agent-b.yml  build-push-ghcr.yml
k8s/: README.md  agent-a-deployment.yaml  agent-b-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml
